# pokemon

./: .env_example  .gitignore  Dockerfile  README.md  asgi.py  black.toml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  serializers.py  setup.cfg  urls.py  uwsgi.ini  wsgi.py
.run/: pytest.run.xml
pokemon/: apps.py  filters.py  models.py  urls.py  views.py
pokemon/migrations/: 0001_initial.py  0002_fill_data.py
settings/: __init__.py  base.py  tests.py
tests/: test_views.py
tests/fixtures/: __init__.py  test_pokemon.csv
tests/test_utils/: test_constraints.py  test_csv_tools.py
utils/: constraints.py  csv_tools.py  pokemon_point_editor.py
