[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

[tool.poetry.dependencies]
python = "3.8"
django = "^3.0.7"
django-filter = "^2.3.0"
psycopg2-binary = "^2.8.5"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
black = "^19.10b0"
isort = "^4.3.21"
flake8 = "^3.8.3"
